--- a/MSP430FR5739/tests/STATEMACHINE_TESTS/Debug/makefile
+++ b/MSP430FR5739/tests/STATEMACHINE_TESTS/Debug/makefile
@@ -4,17 +4,15 @@
 
 SHELL = cmd.exe
 
-CG_TOOL_ROOT := C:/ti/ccs1120/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS
+CG_TOOL_ROOT := C:/ti/ccs1110/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS
 
 GEN_OPTS__FLAG := 
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
 "./debug.obj" \
-"./gearmotor.obj" \
 "./main.obj" \
 "./motor.obj" \
-"./pawl.obj" \
 "./spi.obj" \
 "./statemachine.obj" \
 "./uart.obj" \
@@ -129,42 +127,42 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-winch-system.out \
+STATEMACHINE_TESTS.out \
 
 EXE_OUTPUTS__QUOTED += \
-"winch-system.out" \
+"STATEMACHINE_TESTS.out" \
 
 BIN_OUTPUTS += \
-winch-system.hex \
+STATEMACHINE_TESTS.hex \
 
 BIN_OUTPUTS__QUOTED += \
-"winch-system.hex" \
+"STATEMACHINE_TESTS.hex" \
 
 
 # All Target
 all: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
-	@$(MAKE) --no-print-directory -Onone "winch-system.out"
+	@$(MAKE) --no-print-directory -Onone "STATEMACHINE_TESTS.out"
 
 # Tool invocations
-winch-system.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
+STATEMACHINE_TESTS.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: "$@"'
 	@echo 'Invoking: MSP430 Linker'
-	"C:/ti/ccs1120/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/bin/cl430" -vmspx --use_hw_mpy=F5 --advice:power=all --define=__MSP430FR5739__ --define=_MPU_ENABLE -g --printf_support=minimal --diag_warning=225 --diag_wrap=off --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU40 -z -m"winch-system.map" --heap_size=160 --stack_size=160 --cinit_hold_wdt=on -i"C:/ti/ccs1120/ccs/ccs_base/msp430/include" -i"C:/ti/ccs1120/ccs/ccs_base/msp430/lib/5xx_6xx_FRxx" -i"C:/ti/ccs1120/ccs/ccs_base/msp430/lib/FR57xx" -i"C:/ti/ccs1120/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/lib" -i"C:/ti/ccs1120/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/include" --priority --reread_libs --define=_MPU_ENABLE --diag_wrap=off --display_error_number --warn_sections --xml_link_info="winch-system_linkInfo.xml" --use_hw_mpy=F5 --rom_model -o "winch-system.out" $(ORDERED_OBJS)
+	"C:/ti/ccs1110/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/bin/cl430" -vmspx --use_hw_mpy=F5 --advice:power=all --define=__MSP430FR5739__ --define=_MPU_ENABLE -g --printf_support=minimal --diag_warning=225 --diag_wrap=off --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU40 -z -m"STATEMACHINE_TESTS.map" --heap_size=160 --stack_size=160 --cinit_hold_wdt=on -i"C:/ti/ccs1110/ccs/ccs_base/msp430/include" -i"C:/ti/ccs1110/ccs/ccs_base/msp430/lib/5xx_6xx_FRxx" -i"C:/ti/ccs1110/ccs/ccs_base/msp430/lib/FR57xx" -i"C:/ti/ccs1110/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/lib" -i"C:/ti/ccs1110/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/include" --priority --reread_libs --define=_MPU_ENABLE --diag_wrap=off --display_error_number --warn_sections --xml_link_info="STATEMACHINE_TESTS_linkInfo.xml" --use_hw_mpy=F5 --rom_model -o "STATEMACHINE_TESTS.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: "$@"'
 	@echo ' '
 
-winch-system.hex: $(EXE_OUTPUTS)
+STATEMACHINE_TESTS.hex: $(EXE_OUTPUTS)
 	@echo 'Building secondary target: "$@"'
 	@echo 'Invoking: MSP430 Hex Utility'
-	"C:/ti/ccs1120/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/bin/hex430" --memwidth=8 --romwidth=8 --diag_wrap=off -o "winch-system.hex" $(EXE_OUTPUTS__QUOTED)
+	"C:/ti/ccs1110/ccs/tools/compiler/ti-cgt-msp430_21.6.0.LTS/bin/hex430" --memwidth=8 --romwidth=8 --diag_wrap=off -o "STATEMACHINE_TESTS.hex" $(EXE_OUTPUTS__QUOTED)
 	@echo 'Finished building secondary target: "$@"'
 	@echo ' '
 
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "debug.obj" "gearmotor.obj" "main.obj" "motor.obj" "pawl.obj" "spi.obj" "statemachine.obj" "uart.obj" 
-	-$(RM) "debug.d" "gearmotor.d" "main.d" "motor.d" "pawl.d" "spi.d" "statemachine.d" "uart.d" 
+	-$(RM) "debug.obj" "main.obj" "motor.obj" "spi.obj" "statemachine.obj" "uart.obj" 
+	-$(RM) "debug.d" "main.d" "motor.d" "spi.d" "statemachine.d" "uart.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
