--- a/MSP430FR5739/winch-system-main/.project
+++ b/MSP430FR5739/winch-system-main/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>winch-system-2</name>
+	<name>winch-system-main</name>
 	<comment></comment>
 	<projects>
 	</projects>
