[ADD] - Jib winch CC studios project file

--- a/MSP430FR5739/winch-system-jib/.project
+++ b/MSP430FR5739/winch-system-jib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>winch-system</name>
+	<name>winch-system-jib</name>
 	<comment></comment>
 	<projects>
 	</projects>
